<resources>
    <string name="app_name">AAT Publisher</string>
    <string name="trackable_id_info">Trackable ID: %1$s</string>
    <string name="trackable_status_info">Trackable status: %1$s</string>
    <string name="trackable_latitude_info">Latitude: %1$.6f</string>
    <string name="trackable_longitude_info">Longitude: %1$.6f</string>
    <string name="start_publisher_button">Start publisher</string>
    <string name="add_trackable_button">Add trackable</string>
    <string name="remove_trackable_button">Remove trackable</string>
    <string name="stop_publisher_button">Stop publisher</string>
</resources>