<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/headerIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_logo_height"
        android:layout_marginStart="@dimen/margin_medium"
        android:src="@drawable/header_logo_with_title"
        app:layout_constraintBottom_toBottomOf="@id/headerBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerBackground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/headerBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/headerBackground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/trackableIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/startPublisherButton"
        app:layout_constraintTop_toBottomOf="@id/headerBackground"
        tools:text="Trackable ID: 123" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/trackableStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/trackableIdTextView"
        app:layout_constraintTop_toBottomOf="@id/trackableIdTextView"
        tools:text="Trackable status: OFFLINE" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/trackableLatitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/trackableIdTextView"
        app:layout_constraintTop_toBottomOf="@id/trackableStatusTextView"
        tools:text="Latitude: 12.456" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/trackableLongitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/trackableIdTextView"
        app:layout_constraintTop_toBottomOf="@id/trackableLatitudeTextView"
        tools:text="Longitude: 12.456" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startPublisherButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:background="@drawable/button_background_selector"
        android:text="@string/start_publisher_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/addTrackableButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/startPublisherProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/button_progress_bar_elevation"
        android:padding="@dimen/button_progress_bar_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/startPublisherButton"
        app:layout_constraintLeft_toLeftOf="@id/startPublisherButton"
        app:layout_constraintRight_toRightOf="@id/startPublisherButton"
        app:layout_constraintTop_toTopOf="@id/startPublisherButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addTrackableButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:background="@drawable/button_background_selector"
        android:enabled="false"
        android:text="@string/add_trackable_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/removeTrackableButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/addTrackableProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/button_progress_bar_elevation"
        android:padding="@dimen/button_progress_bar_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/addTrackableButton"
        app:layout_constraintLeft_toLeftOf="@id/addTrackableButton"
        app:layout_constraintRight_toRightOf="@id/addTrackableButton"
        app:layout_constraintTop_toTopOf="@id/addTrackableButton" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/removeTrackableButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:background="@drawable/button_background_selector"
        android:enabled="false"
        android:text="@string/remove_trackable_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/stopPublisherButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/removeTrackableProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/button_progress_bar_elevation"
        android:padding="@dimen/button_progress_bar_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/removeTrackableButton"
        app:layout_constraintLeft_toLeftOf="@id/removeTrackableButton"
        app:layout_constraintRight_toRightOf="@id/removeTrackableButton"
        app:layout_constraintTop_toTopOf="@id/removeTrackableButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stopPublisherButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:background="@drawable/button_background_selector"
        android:enabled="false"
        android:text="@string/stop_publisher_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/stopPublisherProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="@dimen/button_progress_bar_elevation"
        android:padding="@dimen/button_progress_bar_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/stopPublisherButton"
        app:layout_constraintLeft_toLeftOf="@id/stopPublisherButton"
        app:layout_constraintRight_toRightOf="@id/stopPublisherButton"
        app:layout_constraintTop_toTopOf="@id/stopPublisherButton" />

</androidx.constraintlayout.widget.ConstraintLayout>